--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
 		"@types/react-dom": "^18",
 		"@types/uuid": "^10.0.0",
 		"postcss": "^8",
+		"prettier": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.9",
 		"tailwindcss": "^3.4.13",
 		"typescript": "^5"
 	}
